carousel overflow fix

--- a/source/components/carousel/index.sass
+++ b/source/components/carousel/index.sass
@@ -1,11 +1,11 @@
 @import "../../../node_modules/swiper/dist/css/swiper.min.css"
 @import "../../styles/varialbes"
 
+.carousel
+  overflow: hidden
+
 .swiper-outer
   position: relative
-
-.carousel__inner
-  width: calc(#{$min-width} - 20px*2 + 20px + 40px*2)
 
 .swiper-container
   width: calc(#{$min-width} - 20px*2)
